--- a/index.html
+++ b/index.html
@@ -5,8 +5,167 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/6bf25f8513.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- header start -->
+    <header></header>
+    <!-- header end -->
+    <main>
+        <!-- top players & top blogs section start-->
+        <section class="container">
+        <div class="top-player">
+            <h1 class="section-title">Top Player</h1>
+            <div class="player-list">
+                <div class="player-detail">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Top-Player-1</h3>
+                </div>
+                <div class="player-detail">
+                    <img src="images/players/player-2.png" alt="">
+                    <h3>Top-Player-2</h3>
+                </div>
+                <div class="player-detail">
+                    <img src="images/players/player-3.png" alt="">
+                    <h3>Top-Player-3</h3>
+                </div>
+                <div class="player-detail">
+                    <img src="images/players/player-4.png" alt="">
+                    <h3>Top-Player-4</h3>
+                </div>
+                <div class="player-detail">
+                    <img src="images/players/player-5.png" alt="">
+                    <h3>Top-Player-5</h3>
+                </div>
+                <div class="player-detail">
+                    <img src="images/players/player-6.png" alt="">
+                    <h3>Top-Player-6</h3>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="top-blog">
+            <h1 class="section-title">Top Blog</h1>
+            <div class="blog-all">
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite
+                        UI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">UI cheat sheet: 
+                        list vs grids</h3>
+                        <p class="blog-author">By <a href="#">Tess Gadd</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-3.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">7 typography tips 
+                        for interface design</h3>
+                        <p class="blog-author">By <a href="#">Jeremiah Lam</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-4.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Your logo is 
+                        copied</h3>
+                        <p class="blog-author">By <a href="#">Ferdinand Vogler</a></p>
+                    </div>
+                </article>
+            </div>
+        </div>
+        </section>
+        <!-- top players & top blogs section end-->
+
+        <!-- latest course section start -->
+        <section class="container">
+            <h1 class="section-title">Latest Course</h1>
+            <div class="all-courses">
+                <div class="course-one">
+                    <div class="banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete <br> Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff</p>
+                    </div>
+                    <div class="course-info">
+                        <div class="rating">
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                            <p>4.5</p>
+                        <div class="time">
+                            <i class="far fa-clock"></i> 01:30hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course-one">
+                    <div class="banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">Powerpoint 2020  <br> Master Powerpoint Cour</h3>
+                        <p class="course-author">Walter Scott</p>
+                    </div>
+                    <div class="course-info">
+                        <div class="rating">
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                            <p>4.3</p>
+                        <div class="time">
+                            <i class="far fa-clock"></i> 01:20hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course-one">
+                    <div class="banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The Complete JavaScript <br> Course 2020</h3>
+                        <p class="course-author">Reed Krakoff</p>
+                    </div>
+                    <div class="course-info">
+                        <div class="rating">
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                            <p>4.5</p>
+                        <div class="time">
+                            <i class="far fa-clock"></i> 01:30hr
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
