--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
                         </div>
-                            <p>4.5</p>
                         <div class="time">
                             <i class="far fa-clock"></i> 01:30hr
                         </div>
@@ -136,8 +136,8 @@
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star empty"></i>
+                            <span>4.3</span>
                         </div>
-                            <p>4.3</p>
                         <div class="time">
                             <i class="far fa-clock"></i> 01:20hr
                         </div>
@@ -158,8 +158,8 @@
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star fill"></i>
                             <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
                         </div>
-                            <p>4.5</p>
                         <div class="time">
                             <i class="far fa-clock"></i> 01:30hr
                         </div>
